--- a/apps/kopia/docker-compose.yml
+++ b/apps/kopia/docker-compose.yml
@@ -20,13 +20,11 @@ services:
       - ${APP_PORT}:51515
 
     command:
-      - server
-      - start
-      - --disable-csrf-token-checks
-      - --insecure
-      - --address=0.0.0.0:51515
-      - --server-username=${KOPIA_SERVER_USERNAME}
-      - --server-password=${KOPIA_SERVER_PASSWORD}
+      - sh
+      - -c
+      - |
+        ln -sf /host-root/runtipi /root/runtipi
+        exec kopia server start --disable-csrf-token-checks --insecure --address=0.0.0.0:51515 --server-username=${KOPIA_SERVER_USERNAME} --server-password=${KOPIA_SERVER_PASSWORD}
 
     environment:
       - KOPIA_PASSWORD=${KOPIA_PASSWORD}
