--- a/apps/watchtower/docker-compose.yml
+++ b/apps/watchtower/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   watchtower:
     image: beatkind/watchtower:latest
     container_name: watchtower
-    command: ${WATCHTOWER_EXTRA_ARGS}
+    command: ${WATCHTOWER_EXTRA_ARGS:---disable-containers runtipi,runtipi-db,runtipi-queue,runtipi-reverse-proxy}
     environment:
       - PUID=${PUID:-1000}
       - PGID=${PGID:-1000}
