--- a/apps/mediafusion/config.json
+++ b/apps/mediafusion/config.json
@@ -3,7 +3,7 @@
   "id": "mediafusion",
   "name": "MediaFusion+",
   "version": "latest",
-  "tipi_version": 2,
+  "tipi_version": 3,
   "available": true,
   "exposable": true,
   "dynamic_config": true,
@@ -33,8 +33,9 @@
       "hint": "The URL where MediaFusion is hosted (required)."
     },
     {
-      "type": "password",
+      "type": "random",
       "label": "Secret Key",
+	  "min": 32,
       "env_variable": "SECRET_KEY",
       "required": true,
       "hint": "32-character secret key for session signing (will be auto-generated if not provided)."
