--- a/apps/mediafusion/docker-compose.yml
+++ b/apps/mediafusion/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3.8'
 
 services:
   mongodb:
-    # Use MongoDB 4.4 which doesn't require AVX support
     image: mongo:4.4
     container_name: mongodb
     restart: unless-stopped
@@ -15,13 +14,6 @@ services:
       - tipi_main_network
     labels:
       runtipi.managed: "true"
-    # Add health check for MongoDB
-    healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 40s
 
   redis:
     image: redis:7.4-alpine
@@ -34,13 +26,6 @@ services:
       - tipi_main_network
     labels:
       runtipi.managed: "true"
-    # Add health check for Redis
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
 
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:latest
@@ -88,16 +73,11 @@ services:
     container_name: mediafusion
     restart: unless-stopped
     depends_on:
-      mongodb:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      prowlarr:
-        condition: service_started
-      flaresolverr:
-        condition: service_started
-      browserless:
-        condition: service_started
+      - mongodb
+      - redis
+      - prowlarr
+      - flaresolverr
+      - browserless
     environment:
       # ==============================
       # Core Application Settings
@@ -244,7 +224,7 @@ services:
       interval: 1m
       timeout: 10s
       retries: 5
-      start_period: 60s  # Increased start period to allow dependencies to fully start
+      start_period: 30s
     volumes:
       - ${APP_DATA_DIR}/mediafusion:/app/data
     networks:
