--- a/apps/mediafusion/docker-compose.yml
+++ b/apps/mediafusion/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   mongodb:
-    image: mongo:7.0
-    container_name: mediafusion-mongodb
+    image: mongo:4.4
+    container_name: mongodb
     restart: unless-stopped
     environment:
       MONGO_INITDB_DATABASE: mediafusion
@@ -16,8 +16,8 @@ services:
       runtipi.managed: "true"
 
   redis:
-    image: redis:7.2-alpine
-    container_name: mediafusion-redis
+    image: redis:7.4-alpine
+    container_name: redis
     restart: unless-stopped
     volumes:
       - ${APP_DATA_DIR}/redis:/data
@@ -29,7 +29,7 @@ services:
 
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:latest
-    container_name: mediafusion-prowlarr
+    container_name: prowlarr
     restart: unless-stopped
     environment:
       - PUID=1000
@@ -44,7 +44,7 @@ services:
 
   flaresolverr:
     image: ghcr.io/flaresolverr/flaresolverr:latest
-    container_name: mediafusion-flaresolverr
+    container_name: flaresolverr
     restart: unless-stopped
     environment:
       - LOG_LEVEL=info
@@ -57,7 +57,7 @@ services:
 
   browserless:
     image: browserless/chrome:latest
-    container_name: mediafusion-browserless
+    container_name: browserless
     restart: unless-stopped
     environment:
       - CONNECTION_TIMEOUT=600000
